--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+	- uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+	- run: npm install
+	- run: npm run build		
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
