--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 16 
+      - run: npm install
       - run: npm run build
       - name: Install dependencies
         run: |
