--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,20 +33,17 @@ jobs:
         run: |
           npm install
           npm run build
+          npx playwright install --with-deps
           python -m pip install --upgrade pip
-          pip install flake8 pytest
+          pip install pytest
+          
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
-        id: pytest
+      - name: Test with pytest and playwright
+        id: automated-tests
         run: |
           pytest
-      - if: steps.pytest.outcome == 'success'
+          npx playwright test --config=.\tests\config\playwright.config.js
+      - if: steps.automated-tests.outcome == 'success'
         name: Login to DockerHub
         uses: docker/login-action@v1
         with:
