--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,13 +36,12 @@ jobs:
           npx playwright install --with-deps
           python -m pip install --upgrade pip
           pip install pytest
-          
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest and playwright
         id: automated-tests
         run: |
           pytest
-          npx playwright test --config=.\tests\config\playwright.config.js
+          npx playwright test --config=./tests/config/playwright.config.js
       - if: steps.automated-tests.outcome == 'success'
         name: Login to DockerHub
         uses: docker/login-action@v1
