--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "python -m pytest -c .\\grade\\config\\pytest.ini && npx playwright test --config=.\\tests\\config\\playwright.config.js",
     "install_backend": "python -m pip install -r .\\requirements.txt",
     "start": "webpack serve --open --config .\\webpack.config.js",
-    "build": "webpack  --config .\\webpack.config.js",
+    "build": "webpack  --config webpack.config.js",
     "grade": "python -m pytest -c .\\grade\\config\\pytest.ini && npx playwright test --config=.\\grade\\config\\playwright.config.js"
   },
   "repository": {
