--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "python -m pytest -c .\\grade\\config\\pytest.ini && npx playwright test --config=.\\tests\\config\\playwright.config.js",
+    "test": "python -m pytest -c pytest.ini && npx playwright test --config=.\\tests\\config\\playwright.config.js",
     "install_backend": "python -m pip install -r .\\requirements.txt",
     "start": "webpack serve --open --config .\\webpack.config.js",
     "build": "webpack  --config .\\webpack.config.js",
-    "grade": "python -m pytest -c .\\grade\\config\\pytest.ini && npx playwright test --config=.\\grade\\config\\playwright.config.js"
+    "grade": "python -m pytest -c pytest_grade.ini && npx playwright test --config=playwright_grade.config.js"
   },
   "repository": {
     "type": "git",
