--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "python -m pytest -c pytest.ini && npx playwright test --config=playwright.config.js",
+    "test": "npx standard && python -m pytest -c pytest.ini && npx playwright test --config=playwright.config.js",
     "install_backend": "python -m pip install -r requirements.txt",
     "start": "webpack serve --open --config webpack.config.js",
     "build": "webpack  --config webpack.config.js",
@@ -35,6 +35,7 @@
     "postcss-loader": "^7.0.2",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
+    "standard": "^17.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
