--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "npx standard && python -m pytest -c pytest.ini && npx playwright test --config=playwright.config.js",
-    "start": "webpack serve --open --config webpack.config.js",
-    "build": "webpack  --config webpack.config.js",
+    "start": "webpack serve --open --config webpack.config.dev.js",
+    "build": "webpack  --config webpack.config.prod.js",
     "grade": "python -m pytest -c pytest_grade.ini && npx playwright test --config=playwright_grade.config.js"
   },
   "standard": {
