setting up privacy policy and google analytics

--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "eslint": "^8.34.0",
     "favicons": "^7.0.2",
     "favicons-webpack-plugin": "^6.0.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "i": "^0.3.7",
+    "image-webpack-loader": "^8.1.0",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.7.2",
     "playwright": "^1.30.0",
