--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,8 @@ jobs:
     strategy:
       matrix:
         python-version: [ "3.11" ]
+        node-version: [ "18" ]
+
 
     steps:
       - uses: actions/checkout@v3
@@ -27,19 +29,23 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16 
+          node-version: ${{ matrix.node-version }} 
       - name: Install dependencies
         run: |
           npm install
           npm run build
           npx playwright install-deps
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with pytest and playwright
-        id: automated-tests
+      - name: Test with Pytest
+        id: pytest-tests
         run: |
           pytest -c pytest.ini
-          npx playwright test --config=playwright.config.js
-      - if: steps.automated-tests.outcome == 'success'
+      - if: steps.pytest-tests.outcome == 'success'  
+      - name: Test with Playwright
+        id: playwright-tests
+        run: |
+          npx playwright test --config=playwright.config.js    
+      - if: steps.playwright-tests.outcome == 'success'
         name: Login to DockerHub
         uses: docker/login-action@v1
         with:
