--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ on:
       - 'v*'
 
 env:
-  DOCKER_REPO_NAME: kaw393939/mywebclass-practice
+  DOCKER_REPO_NAME: kaw393939/mywebclass
 
 jobs:
   build:
@@ -18,6 +18,7 @@ jobs:
     strategy:
       matrix:
         python-version: [ "3.11" ]
+        node-version: [ "18" ]
 
     steps:
       - uses: actions/checkout@v3
@@ -27,7 +28,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 18 
+          node-version: ${{ matrix.node-version }
       - name: Install dependencies
         run: |
           npm install
