--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }
+          node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: |
           npm install
