--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,26 +21,18 @@ jobs:
         node-version: [ "18" ]
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - uses: actions/setup-node@v3
+      - name: Set up Node ${{ matrix.node-version }}
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: |
-          npm install
-          npm run build
+          npm install        
           npx playwright install-deps
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with pytest and playwright
-        id: automated-tests
+      - name: Test with Playwright
+        id: playwright-tests
         run: |
-          pytest -c pytest.ini
           npx playwright test --config=playwright.config.js
-      - if: steps.automated-tests.outcome == 'success'
+      - if: steps.playwright-tests.outcome == 'success'
         name: Login to DockerHub
         uses: docker/login-action@v1
         with:
