--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,44 +19,42 @@ jobs:
         python-version: [ "3.11" ]
         node-version: [ "18" ]
 
-    container:
-      image: node:${{ matrix.node-version }}-alpine
-
-    services:
-      redis:
-        image: redis:latest
-
     steps:
+      - name: Set up Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Cache dependencies
-        id: cache-dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.npm
-            ~/.cache
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
-        run: |
-          npm ci
-
       - name: Install dependencies
         run: |
           npm install
-
       - name: Test with Playwright
         id: playwright-tests
         run: |
           npm test
-
-      - name: Build and push Docker image
-        if: steps.playwright-tests.outcome == 'success'
+      - if: steps.playwright-tests.outcome == 'success'
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.DOCKER_REPO_NAME }} 
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           platforms: 'linux/arm64/v8, linux/amd64'
           push: true
-          tags: ${{ env.DOCKER_REPO_NAME }}:latest, ${{ env.DOCKER_REPO_NAME }}:${{ github.sha }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
