--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+          npx playwright install-deps
       - name: Test with Playwright
         id: playwright-tests
         run: |
