--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "html-webpack-plugin": "^5.5.0",
     "i": "^0.3.7",
     "image-webpack-loader": "^8.1.0",
+    "imagemin-gifsicle": "^7.0.0",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.7.2",
     "playwright": "^1.30.0",
