--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "devDependencies": {
     "@playwright/test": "^1.30.0",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-import": "^1.13.6",
+    "babel-plugin-lodash": "^3.3.4",
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
     "eslint": "^8.34.0",
@@ -46,14 +48,17 @@
     "i": "^0.3.7",
     "image-webpack-loader": "^8.1.0",
     "imagemin-gifsicle": "^7.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.7.2",
     "playwright": "^1.30.0",
     "postcss-loader": "^7.0.2",
+    "purgecss-webpack-plugin": "^5.0.0",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "standard": "^17.0.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
