--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.11" ]
-        node-version: [ "18" ]
+        node-version: ["18"]
 
     steps:
       - name: Checkout code
@@ -31,7 +30,7 @@ jobs:
                 "cache-from": ["type=registry,ref={{ .Image }}"],
                 "cache-to": ["type=inline"]
               }
-            }  
+            }
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
@@ -45,7 +44,7 @@ jobs:
       - name: Set up Node ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}  
+          node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: |
           npm install
@@ -64,19 +63,22 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ${{ env.DOCKER_REPO_NAME }} 
-      # https://github.com/docker/setup-qemu-action
+          images: ${{ env.DOCKER_REPO_NAME }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver-options: network=host
+          platform: linux/amd64,linux/arm/v7,linux/arm64/v8
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: 'linux/arm64/v8, linux/amd64'
           push: true
+          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           parallel: 4
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
