--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,11 +16,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ["18"]
+        python-version: ["3.11"]
+        node-version: ["16"]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: Enable Docker BuildKit
         run: docker build --progress=plain --secret id=DOCKER_BUILDKIT_CONFIG,env=DOCKER_BUILDKIT_CONFIG=./config.json --platform=local -o type=docker,dest=./Dockerfile .
         env:
@@ -42,7 +45,7 @@ jobs:
             ${{ runner.os }}-${{ env.DOCKER_REPO_NAME }}-
             ${{ runner.os }}-
       - name: Set up Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
@@ -81,4 +84,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           parallel: 4
           cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.build
