--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,9 +78,4 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          parallel: 4
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.build
+          platforms: linux/amd64,linux/arm/v7,linux/arm64/v
