--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          node-version: ${{ matrix.node-version }}
       - name: Enable Docker BuildKit
         run: docker build --progress=plain --secret id=DOCKER_BUILDKIT_CONFIG,env=DOCKER_BUILDKIT_CONFIG=./config.json --platform=local -o type=docker,dest=./Dockerfile .
         env:
@@ -43,7 +41,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ env.DOCKER_REPO_NAME }}-
             ${{ runner.os }}-
-      - name: Set up Node ${{ matrix.node-version }}
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
@@ -78,4 +76,8 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm/v7,linux/arm64/v
+          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          parallel: 4
+          cache-to: type=local,dest=/tmp/.build
