--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Enable Docker BuildKit
-        run: docker build --progress=plain --secret id=DOCKER_BUILDKIT_CONFIG,env=DOCKER_BUILDKIT_CONFIG=./config.json --platform=local -o type=docker,dest=./Dockerfile .
+        run: docker build --progress=plain --secret id=DOCKER_BUILDKIT_CONFIG,env=DOCKER_BUILDKIT_CONFIG=./config.json -o type=docker,dest=./Dockerfile .
         env:
           DOCKER_BUILDKIT_CONFIG: |
             {
