--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,13 +70,13 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           driver-options: network=host
-          platform: linux/amd64,linux/arm/v7,linux/arm64/v8
+          platform: linux/amd64,linux/arm64
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           parallel: 4
