--- a/package.json
+++ b/package.json
@@ -34,27 +34,23 @@
   },
   "homepage": "https://github.com/NJIT-WIS/mywebclass#readme",
   "devDependencies": {
-    "@playwright/test": "^1.30.0",
+    "@playwright/test": "^1.31.1",
     "autoprefixer": "^10.4.13",
-    "babel-plugin-import": "^1.13.6",
-    "babel-plugin-lodash": "^3.3.4",
+    "babel-loader": "^9.1.2",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "css-loader": "^6.7.3",
-    "eslint": "^8.34.0",
-    "favicons": "^7.0.2",
-    "favicons-webpack-plugin": "^6.0.0",
+    "glob": "^9.0.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "i": "^0.3.7",
     "image-webpack-loader": "^8.1.0",
-    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
     "imagemin-webpack-plugin": "^2.4.2",
-    "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.7.2",
-    "playwright": "^1.30.0",
     "postcss-loader": "^7.0.2",
     "purgecss-webpack-plugin": "^5.0.0",
-    "sass": "^1.58.0",
+    "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "standard": "^17.0.0",
     "style-loader": "^3.3.1",
@@ -64,7 +60,6 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "bootstrap-icons": "^1.10.3"
+    "@popperjs/core": "^2.11.6"
   }
 }
