--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,20 +61,17 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.DOCKER_REPO_NAME }}
+      # https://github.com/docker/setup-qemu-action
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+      # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          driver-options: network=host
-          platform: linux/amd64,linux/arm64
+        uses: docker/setup-buildx-action@v2
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v2
         with:
           context: .
+          platforms: 'linux/arm64/v8, linux/amd64'
           push: true
-          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          parallel: 4
-          cache-to: type=local,dest=/tmp/.build
