--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,19 +12,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          driver-options: network=host
-          platforms: linux/amd64,linux/arm64
-
       - name: Build Docker Image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: false
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           tags: your-docker-image:latest
 
       - name: Test with Playwright
