--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,16 +40,10 @@ jobs:
         run: |
           npm install
           npx playwright install-deps
-      - name: Test with Playwright
-        uses: microsoft/playwright-github-action@v1
+      - name: Test Playwright
         id: playwright-tests
-        with:
-          browser: chromium
-          install: true
-          working-directory: ./tests
-          script: |
-            npm install
-            npm test
+        run: |
+          npx playwright test --config=playwright.config.js
       - if: steps.playwright-tests.outcome == 'success'
         name: Login to DockerHub
         uses: docker/login-action@v2
