trying to do a build and test fast

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 env:
-  DOCKER_IMAGE: kaw393939/mywebclass
+  DOCKER_IMAGE: kaw393939/mywebclass:latest
 
 jobs:
   build-and-test:
