--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Build and Test with Playwright
+name: Build and Test Docker Image
 
 on:
   push:
@@ -13,16 +13,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-   
+
+      - name: Set Docker buildx environment
+        uses: docker/setup-buildx-action@v1
+
       - name: Build Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: false
-          tags: $DOCKER_IMAGE
+        run: docker build --tag $DOCKER_IMAGE .
 
       - name: Start Docker container
-        uses: docker://$DOCKER_IMAGE
+        run: docker run -d -p 8080:80 -e PW_SERVICE_BASE_URL=http://localhost:8080 $DOCKER_IMAGE
 
       - name: Install dependencies
         run: docker exec $DOCKER_IMAGE npm ci
