trying to do a build and test fast

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image
-        run: docker build --tag myapp .
+        run: docker buildx build --platform amd64 --load --tag myapp .
 
       - name: Start Docker container
         run: docker run -d -p 8080:80 -e PW_SERVICE_BASE_URL=http://localhost:8080 myapp
