--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,11 @@ jobs:
       - name: Start Docker container
         run: docker run -d -p 8080:80 -e PW_SERVICE_BASE_URL=http://localhost:8080 myapp
 
-      - name: Run Playwright tests
-        uses: microsoft/playwright-github-action@v1
-        with:
-          browser: chromium
-          install-browser: true
-          script-path: tests
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
+      - name: Run tests
+        run: npx playwright test
