--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Setup Node
+      - uses: actions/setup-node@v3
 
       - name: Set Docker buildx environment
         uses: docker/setup-buildx-action@v1
@@ -19,10 +21,8 @@ jobs:
         run: docker buildx build --platform amd64 --load --tag myapp .
 
       - name: Start Docker container
-        run: docker run -d -p 8080:80 -e PW_SERVICE_BASE_URL=http://localhost:8080 myapp
+        run: docker run -d -p 3000:80 myapp
 
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
       - name: Install dependencies
         run: npm ci
       - name: Install playwright browsers
