--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,14 +4,18 @@ on:
   push:
   pull_request:
 
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
-      - name: Setup Node       
+        uses: actions/checkout@v2
+        with:
+          ref: main
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.x'
       - name: Install dependencies
         run: npm ci
       - name: Install playwright browsers
