--- a/.github/workflows/test_and_quality.yml
+++ b/.github/workflows/test_and_quality.yml
@@ -1,8 +1,14 @@
-name: Test and Build
+name: Deploy static content to Pages
 
-on: [push]
-   workflow_dispatch:
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: "*"
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 jobs:
+  
   build:
     runs-on: ubuntu-latest
 
