--- a/.github/workflows/test_and_quality.yml
+++ b/.github/workflows/test_and_quality.yml
@@ -22,7 +22,9 @@ jobs:
           node-version: 18.x
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npx playwright install chromium
+          npm install
 
       - name: Run tests
         run: npm run test
