--- a/.github/workflows/test_and_quality.yml
+++ b/.github/workflows/test_and_quality.yml
@@ -34,10 +34,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: test-results/screenshots/, test-results/videos/
-
-      - name: Upload code coverage results
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-results
-          path: coverage/
+          path: |
+                ./test-resu* 
