--- a/.github/workflows/playwright_test_record_video.yml
+++ b/.github/workflows/playwright_test_record_video.yml
@@ -25,10 +25,16 @@ jobs:
         run: |
           npx playwright install chromium
           npm install lint format build
+          npm install -g lighthouse
           npm install 
 
       - name: Run tests
         run: npm run test
+
+      - name: Run Lighthouse
+        run: |
+            npm run start
+            lighthouse http://localhost:3000 --output html --output-path test-results/report.html
 
       - name: Upload screenshots and videos of failed tests
         uses: actions/upload-artifact@v3
