--- a/.github/workflows/playwright_test_record_video.yml
+++ b/.github/workflows/playwright_test_record_video.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           npx playwright install chromium
-          npm install -g lighthouse
+          npm install lighthouse
           npm install 
           npm run start
 
