--- a/.github/workflows/playwright_test_record_video.yml
+++ b/.github/workflows/playwright_test_record_video.yml
@@ -26,6 +26,10 @@ jobs:
           npx playwright install chromium
           npm install -g lighthouse
           npm install 
+          npm install -g chrome-launcher
+          npm install -g axe-core
+          npm install -g chromium
+
           npm run start & npx wait-on http://localhost:3000
 
       - name: Run PLaywright tests
@@ -34,7 +38,6 @@ jobs:
       - name: Generate Lighthouse Report and Convert it to PDF using create_pdf_from_lighthouseJsonOutput.js
         run: |
             lighthouse http://localhost:3000 --output json --output-path ./test-results/report.json
-            npm install chromium
             node create_pdf_from_lighthouseJsonOutput.js
       - name: Upload report, screenshots and videos of failed tests
         uses: actions/upload-artifact@v3
