--- a/.github/workflows/playwright_test_record_video.yml
+++ b/.github/workflows/playwright_test_record_video.yml
@@ -19,19 +19,28 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get update
+          sudo apt-get install -y libgbm-dev
           npm ci
           npx playwright install chromium
           npm install -g lighthouse chrome-launcher axe-core chromium wait-on
 
+      - name: Start the X server
+        run: |
+          export DISPLAY=:0
+          startx & sleep 5
+
       - name: Start the application
-        run: npm run start & npx wait-on http://localhost:3000
+        run: |
+          export DISPLAY=:1
+          npm run start & npx wait-on http://localhost:3000
 
       - name: Run Playwright tests
         run: npx playwright test --config=playwright.config.js
 
       - name: Generate Lighthouse Report and Convert it to PDF using create_pdf_from_lighthouseJsonOutput.js
         run: |
-          lighthouse http://localhost:3000 --output json --output-path ./test-results/report.json
+          lighthouse http://localhost:3000 --output json --output-path ./test-results/report.json --chrome-flags="--headless --no-sandbox --disable-gpu"
           node create_pdf_from_lighthouseJsonOutput.js
 
       - name: Upload report, screenshots and videos of failed tests
