--- a/.github/workflows/playwright_test_record_video.yml
+++ b/.github/workflows/playwright_test_record_video.yml
@@ -23,7 +23,7 @@ jobs:
           sudo apt-get install -y libgbm-dev
           npm ci
           npx playwright install chromium
-          npm install -g lighthouse chrome-launcher axe-core chromium wait-on
+          npm install -g playwright lighthouse chrome-launcher axe-core chromium wait-on
 
       - name: Start the X server
         run: |
