--- a/.github/workflows/playwright_test_record_video.yml
+++ b/.github/workflows/playwright_test_record_video.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgbm-dev
+          sudo apt-get install -y libgbm-dev         
+          sudo apt-get install -y libgbm-dev xinit
           npm ci
           npx playwright install chromium
           npm install -g playwright lighthouse chrome-launcher axe-core chromium wait-on
@@ -38,11 +39,9 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test --config=playwright.config.js
 
-      - name: Generate Lighthouse Report and Convert it to PDF using create_pdf_from_lighthouseJsonOutput.js
+      - name: Generate Lighthouse Report
         run: |
-          lighthouse http://localhost:3000 --output json --output-path ./test-results/report.json --chrome-flags="--headless --no-sandbox --disable-gpu"
-          npm install playwright
-          node create_pdf_from_lighthouseJsonOutput.js
+          lighthouse http://localhost:3000 --output html --output-path ./test-results/report.html --chrome-flags="--headless --no-sandbox --disable-gpu"
       - name: Upload report, screenshots and videos of failed tests
         uses: actions/upload-artifact@v3
         with:
