Fix typo in .prettierrc.json file. Remove deprevated jsxBracketSameLine param.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,6 @@
 {
-  "allowParens": "always",
+  "arrowParens": "always",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
   "jsxSingleQuote": true,
   "semi": true,
   "singleQuote": true,
