--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "bugs": {
     "url": "https://github.com/roopalisarode/mywebclass/issues"
   },
-  "homepage": "https://github.com/roopalisarode/mywebclass-simulation/src/index.html",
+  "homepage": "https://roopalisarode.github.io/mywebclass-simulation/",
   "devDependencies": {
     "@playwright/test": "^1.31.1",
     "autoprefixer": "^10.4.13",
