--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   },
   "homepage": "https://github.com/NJIT-WIS/mywebclass#readme",
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
     "@playwright/test": "^1.31.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
@@ -68,6 +71,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.3"
+    "bootstrap-icons": "^1.10.3",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1"
   }
 }
