--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
     master_branch:
     development_branch:
-      image: sumansmhalsank11/mywebclass:development
+      image: sumansmhalsank11/mywebclass_simulation
       container_name: development_branch
       pull_policy: always
       restart: always
